--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -43,4 +43,12 @@
         android:text="sticky"
         android:textSize="18sp" />
 
+    <Button
+        android:id="@+id/wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="wave"
+        android:textSize="18sp" />
+
 </LinearLayout>
