--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,54 +1,68 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/rotation"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="rotation"
-        android:textSize="18sp" />
+        android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/translate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="translate"
-        android:textSize="18sp" />
+        <Button
+            android:id="@+id/rotation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="rotation"
+            android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/systemEvaluator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="systemEvaluator"
-        android:textSize="18sp" />
+        <Button
+            android:id="@+id/translate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="translate"
+            android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/customEvaluator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="customEvaluator"
-        android:textSize="18sp" />
+        <Button
+            android:id="@+id/systemEvaluator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="systemEvaluator"
+            android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/sticky"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="sticky"
-        android:textSize="18sp" />
+        <Button
+            android:id="@+id/customEvaluator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="customEvaluator"
+            android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/wave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="wave"
-        android:textSize="18sp" />
+        <Button
+            android:id="@+id/sticky"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="sticky"
+            android:textSize="18sp" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/wave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="wave"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/flow_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="flowLayout"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+</ScrollView>
