--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -63,6 +63,14 @@
             android:layout_marginTop="5dp"
             android:text="flowLayout"
             android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/bubble_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="BubbleImageView"
+            android:textSize="18sp" />
     </LinearLayout>
 
 </ScrollView>
